iac/k8s/ai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: agrosense
  labels:
    app: ai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ai-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4006"
        prometheus.io/path: "/health"
    spec:
      automountServiceAccountToken: false
      containers:
        - name: ai-service
          image: damarisateh/agrosense-ai:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4006
          livenessProbe:
            tcpSocket:
              port: 4006
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 4006
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
              ephemeral-storage: "256Mi"
            limits:
              memory: "512Mi"
              cpu: "200m"
              ephemeral-storage: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: agrosense
spec:
  selector:
    app: ai-service
  ports:
    - port: 4006
      targetPort: 4006
  type: ClusterIP
