iac/k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: agrosense
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: auth-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4001"
        prometheus.io/path: "/health"
    spec:
      automountServiceAccountToken: false
      containers:
        - name: auth-service
          image: damarisateh/agrosense-auth:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "256Mi"
            limits:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: agrosense
spec:
  selector:
    app: auth-service
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
