iac/k8s/weather-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  namespace: agrosense
  labels:
    app: weather-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: weather-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3003"
        prometheus.io/path: "/health"
    spec:
      automountServiceAccountToken: false
      containers:
        - name: weather-service
          image: damarisateh/agrosense-weather:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "256Mi"
            limits:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: agrosense
spec:
  selector:
    app: weather-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
